# dprint-plugin-json-schema-sort

./: .dprint.jsonc  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
deployment/: schema.json
src/: lib.rs
