[package]
name         = "dprint-plugin-json-schema-sort"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
description  = "dprint Wasm plugin that deterministically sorts JSON Schema files"
readme       = "README.md"
repository   = "https://github.com/kjanat/dprint-plugin-json-schema-sort"
license      = "Apache-2.0 OR MIT"
keywords     = ["dprint", "formatter", "json", "schema", "wasm"]
categories   = ["development-tools", "text-editors"]
publish      = false
autobins     = false

[lib]
crate-type = ["cdylib", "lib"]
name       = "dprint_plugin_json_schema_sort"
path       = "src/lib.rs"

[dependencies]
anyhow = "1"

[dependencies.json-schema-sort]
version          = "0.1"
default-features = false

[dependencies.dprint-core]
version  = "0.67"
features = ["formatting", "wasm"]

[dependencies.dprint-core-macros]
version = "0.1"

[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

# Size-optimized profile for the published Wasm artifact: cold-load cost
# dominates a dprint plugin, so trade compile time / steady-state speed for a
# smaller binary. Built with `cargo build --profile wasm-release`.
[profile.wasm-release]
inherits      = "release"
opt-level     = "z"
strip         = true
lto           = "fat"
panic         = "abort"
codegen-units = 1
